# hems-nilm-gateway

./: .env.run  .gitignore  Makefile  README.md  pyproject.toml
artifacts/mgru_ofat_s2s/ID_2025-11-13_193225_26/: config.yaml  kpis.json  normalizer.json  per_device_metrics.csv
src/hems_nilm_gateway/config/: settings.py
src/hems_nilm_gateway/core/: domain.py  model_mgru.py
src/hems_nilm_gateway/gateway/: app.py  controller.py  host_metrics.py  telemetry.py
src/hems_nilm_gateway/gateway/io_adapters/: homeassistant_publisher.py  interfaces.py  meter_adapter.py
src/hems_nilm_gateway/gateway/nilm/: engine.py  model_manager.py
src/hems_nilm_gateway/gateway/preprocessing/: preprocessor.py
